<resources>
    <string name="app_name">Recycler App</string>
    <string name="actual_tab_title">Actual</string>
    <string name="history_tab_title">History</string>
    <string name="total_tab_title">Total</string>
    <string name="create_user">Create another user</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="department">Department</string>
    <string name="street_number">Street number</string>
    <string name="street_address">Street address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip code</string>
    <string name="bottles">Bottles</string>
    <string name="tetrabriks">Tetrabriks</string>
    <string name="glass">Glass</string>
    <string name="paperboard">Paperboard</string>
    <string name="cans">Cans</string>

    <string name="create_user_title">Create a new user</string>
    <string name="zero">0</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="submit_to_server">Submit recycling to server</string>
    <string name="history_refresh">Refresh History</string>
    <string name="total_refresh">Refresh total</string>

</resources>
