<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.TotalFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TotalLabelLayout"
            android:hint="@string/bottles">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_bottles"
                style="@style/TotalLabelTextInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TotalLabelLayout"
            android:hint="@string/tetrabriks">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_tetrabriks"
                style="@style/TotalLabelTextInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TotalLabelLayout"
            android:hint="@string/glass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_glass"
                style="@style/TotalLabelTextInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TotalLabelLayout"
            android:hint="@string/paperboard">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_paperboard"
                style="@style/TotalLabelTextInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/TotalLabelLayout"
            android:hint="@string/cans">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/total_cans"
                style="@style/TotalLabelTextInput" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/total_refresh_button"
            style="@style/WideButton"
            android:text="@string/total_refresh" />

    </LinearLayout>
</ScrollView>