<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.CreateUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CreateUserTextLayout"
            android:hint="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_first_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CreateUserTextLayout"
            android:hint="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_last_name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CreateUserTextLayout"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_email_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CreateUserTextLayout"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CreateUserTextLayout"
            android:hint="@string/address">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/create_user_address_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_user_submit_button"
            style="@style/CreateUserButton"
            android:text="@string/create_user" />

    </LinearLayout>
</ScrollView>
